# Sanctum

./: .gitignore  Cargo.toml  readme.md  sanctum_setup.bat  sign_elam.bat  sign_etw_consumer.bat  sign_ppl_runner.bat  start_sanctum_service.bat
driver/: Cargo.toml  build.rs  new_cert.ps1  notes.md  rust-toolchain.toml  sanctum.cat  sanctum.cer  sanctum.inf  sanctum.sys  sign.bat
driver/src/: alt_syscalls.rs  core.rs  device_comms.rs  ffi.rs  lib.rs  mutex.rs  mutex_test.rs  utils.rs
driver/src/core/: W11-guid-results.md  etw_mon.rs  mod.rs  process_callbacks.rs  process_monitor.rs  processes.rs  registry.rs  syscall_handlers.rs  syscall_processing.rs  threads.rs
elam_installer/: Cargo.toml
elam_installer/src/: main.rs
etw_consumer/: Cargo.toml
etw_consumer/src/: main.rs
gui/src-tauri/: Cargo.toml
gui/src-tauri/src/: ipc.rs  main.rs  processes.rs
injected_dll/: Cargo.toml
injected_dll/src/: integrity.rs  ipc.rs  lib.rs  stubs.rs  threads.rs
malware/: Cargo.toml
malware/src/: main.rs  patch_etw.rs
sanctum_ppl_runner/: Cargo.toml
sanctum_ppl_runner/src/: ipc.rs  logging.rs  main.rs  registry.rs  tracing.rs
shared_no_std/: Cargo.toml
shared_no_std/src/: constants.rs  driver_ipc.rs  ghost_hunting.rs  ioctl.rs  ipc.rs  lib.rs
shared_std/: Cargo.toml
shared_std/src/: constants.rs  lib.rs  processes.rs  security.rs
um_engine/: Cargo.toml
um_engine/src/: engine.rs  main.rs  usermode_api.rs
um_engine/src/core/: core.rs  injected_dll_ipc.rs  ipc_etw_consumer.rs  ipc_injected_dll.rs  mod.rs  process_monitor.rs
um_engine/src/driver_manager/: driver_manager.rs  ioctl.rs  service.rs
um_engine/src/gui_communication/: ipc.rs
um_engine/src/utils/: env.rs  mod.rs  security.rs
