[package]
name = "injected_dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.60.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Threading", 
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }
shared_std = { path = "../shared_std" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
md-5 = "0.10.6"